--- a/docs/resources/css/global.css
+++ b/docs/resources/css/global.css
@@ -1,2 +1,6 @@
 /*** Place your styles below ***/ 
 
+h2, h3 {
+    background: rgb(167, 204, 162);
+    background: linear-gradient(90deg, rgba(167, 204, 162, 0.7973564425770308) 0%, rgba(167, 204, 162, 0) 100%);
+}
